<resources>
    <string name="app_name">paranmo</string>
    <string name="welcome">Selamat Datang di</string>
    <string name="title_apps">Paranmo</string>
    <string name="description">Aplikasi tanaman herbal yang dapat memberikan informasi\nterkait pengidentifikasian, pembudidayan, pengolahan dan\npenggunaan tanaman herbal menjadi obat herbal.</string>
    <string name="get_started">Mari kita mulai</string>
    <string name="todo">TODO</string>
    <string name="beta_version">Beta version</string>
    <string name="email">Email</string>
    <string name="failed_password">password tidak boleh kurang dari 8 huruf</string>
    <string name="input_password">Password</string>
    <string name="failed_email">Format email anda tidak benar</string>
    <string name="login">Login</string>
    <string name="lupa_password"><u>Lupa Password</u></string>
    <string name="daftar_akun"><u>Daftar Akun</u></string>
    <string name="daftar_akun_no_underline">Daftar Akun</string>
    <string name="or">Atau</string>
    <string name="login_via_google">Via Google</string>
    <string name="email_account">Masukkan email anda</string>
    <string name="password_account">Masukkan password anda</string>
    <string name="failed_name">Wajib diisi</string>
    <string name="text_daftar_akun">Silahkan mengisi formulir pendaftaran akun dibawah ini</string>
    <string-array name="name">
        <item>Paranmo Official</item>
        <item>Paranmo Official</item>
        <item>Paranmo Official</item>
    </string-array>
    <string name="name_account">Masukan nama lengkap anda</string>
    <string name="search_tanaman_herbal">Mecari tanaman herbal</string>
    <string name="favorit_bar">Favorit</string>
    <string name="favorit">Yah, anda belum menambahkan item favorite :(</string>
    <string name="notif_bar">Notifikasi</string>
    <string name="notif">Masih belum ada notifikasi untuk saat ini :D</string>
    <string name="plant">Nama Tumbuhan</string>
    <string name="latin">latin</string>
    <string name="identification">Persen</string>
    <string name="result_bar">Result</string>
    <string name="result_identification_bar">Identifikasi Tanaman Herbal</string>
    <string name="information_application">Informasi Aplikasi</string>
    <string name="description_application"><p>  Bangkit tahun ini kembali menyelenggarakan Capstone Project 2022, dimana mahasiswa akan membuat project aplikasi yang menggabungkan 3 teknologi(cloud computing, machine learning, mobile development) berdasarkan case industri dan beberapa tema seperti economic and social resilience, healthcare, mobile and smart city, dan character building.</p>\n\n<p>  Mengusung tema Healthcare, kami dari tim C22-PS020 membuat aplikasi Paranmo(Paparan tanaman obat) sebagai solusi dari masih kurangnya pengetahuan masyarakat mengenai penggunaan tanaman herbal sebagai obat. Berbekal dari ilmu dan bimbingan dari Bangkit dan mentor, aplikasi ini dirancang untuk dapat melakukan scanning terhadap daun tanaman herbal untuk mengetahui manfaat dan cara penggunaannya dalam mengobati suatu penyakit.</p>\n\n<p>  Aplikasi yang dirancang oleh Alfi Nazilah(STIMIK Tunas Bangsa Banjarnegara), Alsy Taqiya Herasafitri(Universitas Brawijaya), Angel Citra Ornella(Universitas Udayana), Givar Elva Rizky Hana\'an(Universitas Potensi Utama), Muhammad Rohfi(Universitas Yarsi), dan Vita Nurhayati(Universitas Jember) ini mengajak penggunanya untuk tidak hanya dapat mengetahui cara penggunaan tanaman - tanaman herbal, tetapi juga untuk ikut berkontribusi dengan membagikan pengetahuannya tentang tanaman herbal melalui aplikasi.</p>\n</string>
    <string name="post_bar">Posting</string>
    <string name="failed_camera">Gagal memuat camera</string>
    <string name="camera"><u>Kamera</u></string>
    <string name="gallery"><u>Galeri</u></string>
    <string name="description_plant">Deskripsi Tanaman Herbal</string>
    <string name="benefit_plant">Manfaat Tanaman Herbal</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="paranmo_shop">ParanShop</string>
    <string name="paranmo_nity">ParanNity</string>
    <string name="permission_no_granted">Izin tidak diberikan</string>
    <string name="profile">Profile</string>
    <string name="failed_pic">Gagal mengambil photo</string>
    <string name="camera_identification">Menampilkan Fitur Scanning Tanaman</string>
    <string name="add_plant">Menampilkan Membuat Postingan Tanaman Herbal</string>
    <string name="coming_soon_parannity">Maaf fitur ParanNity sedang tahap pengembangan. Kami akan segera kembali</string>
    <string name="home_one">Identifikasi</string>
    <string name="home_two">tanaman</string>
    <string name="home_three">herbal</string>
    <string name="home_four">hanya dengan</string>
    <string name="home_five">satu klik!</string>
    <string name="Identification_bar">Identifikasi tanaman herbal sekali klik!</string>
    <string name="artikel">Artikel saya</string>
    <string name="show_all"><u>Lihat Semua</u></string>
    <string name="coming_soon">Akan Hadir</string>
    <string name="post">Mari berbagi pengalaman anda mengenai tanaman herbal untuk semuanya!</string>
    <string name="name_plant">Nama Tanaman Herbal</string>
    <string name="latin_plant">Nama Latin Tanaman Herbal</string>
    <string name="settingapplication">Seputar Paranmo</string>
    <string name="information_paranmo">Seputar Paranmo</string>
    <string name="information_syarat">Syarat dan Ketentuan</string>
    <string name="information_kebijakan">Kebijakan Privasi</string>
    <string name="information_ulasan">Ulas Aplikasi ini</string>
    <string name="logout">Logout</string>
    <string name="daftarAkun">Daftar Akun</string>
    <string name="read"><u>Sudah Dibaca</u></string>
    <string name="notif_scan">Beri penilaian scan gambar Anda</string>
    <string name="notif_deskripsi_scan">Berapa banyak bintang yang Anda ingin beri pada deteksi tanaman obat dengan Paranmo scan secara keseluruhan? Beri ulasan!</string>
    <string name="notif_article">Yang ditunggu-tunggu..</string>
    <string name="notif_deskripsi_article">Hai! Ada artikel kesehatan baru yang berkaitan dengan obat yang telah Anda scan, lho! Yuk, dibaca.</string>
    <string name="notif_paranmo">Gapapa hati hampa, sakit jangan..</string>
    <string name="notif_deskripsi_paranmo">Yuk nge-Paranmo dulu :)</string>
    <string name="notif_paranmo_scan">Mari coba fitur Paranmo-scan</string>
    <string name="notif_deskripsi_paranmo_scan">Sedang melihat suatu tanaman obat namun bingung kegunaannya apa? Yuk coba Paranmo-scan!</string>
    <string-array name="date">
        <item>20 Mei 2022</item>
        <item>30 Mei 2022</item>
        <item>2 Juni 2022</item>
    </string-array>
    <string name="name_person">Nama</string>
    <string name="createdAccount">Akun anda berhasil dibuat</string>
    <string name="invalidAccount">Akun tidak berhasil dibuat</string>
    <string name="sukses">Login Sukses!</string>
    <string name="failed">Username dan password tidak sesuai</string>
    <string name="camera_use">Kamera</string>
    <string name="info">Perhatian</string>
    <string name="description_info">sebelum melakukan identifikasi tanaman herbal ada beberapa yang harus di perhatikan untuk mendapatkan akurasi yang sesuai</string>
    <string name="text_info">1. Kamera dan objek maupun itu tanaman atau gambar minimal jarak 10cm\n\n 2. Jika identifikasi menggunakan gambar, maka kualitas gambar harus tetap terjaga dan tidak menurun resolusi gambar maupun ketajaman gambar</string>
    <string name="text_info_1"><b>Maaf fitur paracam masih belum tahap sempurna, ada beberapa fitur yang masih belum di develop dengan baik seperti : \n\n - memberikan label "None" apabila pengguna mengscan objek yang tidak ada didalam dataset system\n\n- membuat fitur daftar list identifikasi berdasarkan akurasi yang sudah ditentukan\n\n- Menampilkan detail tanaman herbal berdasarkan identifikasi\n\n Kami akan terus mengembangkan fitur ini lebih lanjut</b></string>
    <string name="plant_use">Proses</string>
    <string name="final_use">Hasil</string>
    <string name="info_use">Catatan apabila pada saat hasil identifikasi system menampilkan hasil <b>"None"</b> maka hasil tersebut tidak ada di dataset system kami</string>
    <string name="search_bar">Mencari obat dan tanaman herbal</string>
    <string name="discount">Diskon</string>
    <string name="discount_1">25%</string>
    <string name="discount_2">untuk pengguna baru</string>
    <string name="button_discount">Klaim Sekarang</string>
    <string name="discountPayment">10%</string>
    <string name="discountPaymentDes">Pembayaran melalui transfer</string>
    <string name="category_1">Tanaman Herbal</string>
    <string name="category_2">Obatan Herbal</string>
    <string name="p_discount">Produk Diskon</string>
    <string name="p_terlaris">Produk Terlaris</string>
    <string name="location_1">Kota Banjar</string>
    <string name="star_1">4,9</string>
    <string name="price_1">Rp. 80.000</string>
    <string name="plant_1">Tanaman Lidah…</string>
    <string name="nameproduct">Nama Produk</string>
    <string name="price_product">Harga Produk</string>
    <string name="location_product">Lokasi Produk</string>
    <string name="star_product">Bintang Produk</string>
    <string name="name_product_full">Full Nama Produk</string>
    <string name="date_product">Tanggal Produk</string>
    <string name="insight_product">Ulasan Produk</string>
    <string name="time_booking_product">Waktu Pesanan Produk</string>
    <string name="booking_product">Pesanan Produk</string>
    <string name="description_product">Deskripsi Produk</string>
    <string name="score_insight">Jumah Ulasan</string>
    <string name="star_prodcut_detail">Jumlah Bintang Ulasan</string>
    <string name="time_product_insight">Waktu Ulasan Produk</string>
    <string name="name_person_product">Nama pengguna</string>
    <string name="detail_insight">Ulasan Pengguna</string>
    <string name="name_outlite">Nama Toko</string>
    <string name="logo_outlite">Logo Toko</string>
    <string name="price_discount"><strike>Rp. 80.000</strike></string>
    <string name="price_new">Rp. 80.000</string>
    <string name="online">Online</string>
    <string name="follow">Follow</string>
    <string name="conditionProduct">Kondisi Produk</string>
    <string name="newconditionProduct">Baru</string>
    <string name="detailProduct">Detail Produk</string>
    <string name="statusProduct">Status</string>
    <string name="status_Product">Ready</string>
    <string name="product">Lainnya di toko ini</string>
    <string name="insightProduct">Ulasan</string>
    <string name="time_insight">2 hari yang lalu</string>
    <string name="person">Dani Salaman</string>
    <string name="bookingProduct">Pesanan</string>
    <string name="tutorial_plant">Cara Pemakaian</string>
    <string name="health"><![CDATA[Tips & Trik Kesehatan]]></string>
    <string name="budidaya">Budidaya Tanaman Herbal</string>
    <string name="buy">Beli Sekarang</string>
    <string name="cart">Keranjang</string>
    <string name="articel_other">Artikel Lainnya</string>
    <string name="account">Akun Saya</string>
    <string name="handphone">nomor handphone</string>
    <string name="null_phone">-</string>
    <string name="saldo"><![CDATA[Saldo & Point]]></string>
    <string name="member">Member Perunggu</string>
    <string name="premium">Paranmo Premium</string>
    <string name="use">Cara Penggunaan</string>
    <string name="top_up">Isi saldo paranpay disini!</string>
    <string name="price">Rp. 0</string>
    <string name="coin">Klaim coin anda disini!</string>
    <string name="parannity">ParanNity</string>
    <string-array name="frameDis">
        <item>@drawable/border_discount</item>
        <item>@drawable/border_discount_payment_frame</item>
    </string-array>
</resources>