<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/text_header_on_boarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Paranmo"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <TextView
        android:id="@+id/header"
        style="@style/text_title_on_boarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="220dp"
        android:text="@string/welcome"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        style="@style/text_header_on_boarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:text="@string/title_apps"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text"
        style="@style/text_on_boarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:lineHeight="18dp" />

    <TextView
        android:id="@+id/get_started_text"
        style="@style/text_button_on_boarding"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="12dp"
        android:text="@string/get_started"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/get_started"
        app:layout_constraintEnd_toStartOf="@+id/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_started" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/get_started"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="@color/accents_60"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:maxImageSize="35sp"
        app:srcCompat="@drawable/ic_round_arrow_forward_ios_24"
        tools:ignore="ImageContrastCheck,RtlSymmetry" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_onboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started" />

</androidx.constraintlayout.widget.ConstraintLayout>