<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="155dp"
    android:layout_height="215dp"
    android:id="@+id/card_identification"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="155dp"
        android:layout_height="215dp"
        android:padding="0dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="155dp"
            android:layout_height="128dp"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/plant"
            style="@style/text_card"
            android:layout_width="wrap_content"
            android:layout_height="31sp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="45dp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            tools:ignore="RtlHardcoded"
            tools:text="@string/plant" />

        <TextView
            android:id="@+id/latin"
            style="@style/text_latin"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:gravity="center"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/plant"
            tools:ignore="RtlHardcoded"
            tools:text="@string/latin" />

        <View
            android:id="@+id/view6"
            android:layout_width="70dp"
            android:layout_height="37dp"
            android:background="@drawable/vector"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/identification"
            style="@style/text_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            card_view:layout_constraintEnd_toEndOf="@+id/view6"
            card_view:layout_constraintHorizontal_bias="0.65"
            card_view:layout_constraintStart_toStartOf="@+id/view6"
            card_view:layout_constraintTop_toTopOf="@+id/view6"
            tools:ignore="MissingConstraints"
            tools:text="@string/identification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>