<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="275dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="20dp"
    android:id="@+id/card_view"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="0dp"
    android:layout_marginStart="15dp"
    android:layout_marginBottom="0dp"
    card_view:cardBackgroundColor="@color/primary_10"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:padding="0dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="160dp"
            android:layout_height="128dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>


        <TextView
            android:id="@+id/plant"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            tools:ignore="RtlHardcoded"
            tools:text="@string/plant_1" />

        <TextView
            android:id="@+id/price"
            style="@style/text_card"
            android:layout_width="0dp"
            android:layout_height="31sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            tools:text="@string/price_1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/plant"
            tools:ignore="RtlHardcoded" />

        <FrameLayout
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/price">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/icon_location"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/ic_round_location_on_24"
                    android:contentDescription="@string/todo"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_location"
                    style="@style/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/icon_location"
                    card_view:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/location_1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/location">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/star_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/ic_round_star_24"
                    android:contentDescription="@string/todo"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_star"
                    style="@style/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/star_icon"
                    card_view:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/star_1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>